[project]
name = "endtoendlang-chainproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "google-genai>=1.73.1",
    "hf-xet>=1.4.3",
    "huggingface-hub>=1.12.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchainhub>=0.1.21",
    "langserve>=0.3.3",
    "langsmith>=0.7.37",
    "numpy>=2.4.4",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "setuptools>=82.0.1",
    "sse-starlette>=3.4.1",
    "streamlit>=1.56.0",
    "unstructured>=0.22.23",
    "uvicorn>=0.46.0",
    "wikipedia>=1.4.0",
]
